refactor a little texts in console